Changelog
=========

1.2.4 (unreleased)
------------------

- Add selector for AT required field icon
  [tom_gross]

- Use CSS :content selector to inject required icon instead of image
  [tom_gross]

1.2.3 (2012-04-15)
------------------

- Move .row and .cell styles from footer.pt to Sunburst main_template.
  Fixes https://dev.plone.org/ticket/12156
  [agnogueira]

- fix 'device-width;" for key "width" not recognized in chrome' in javascript console  
  [eleddy]

- Fix view windw error in chrome
  [plone konferenz coding dojo]


1.2.2 (2012-02-07)
------------------

- Fix the styling of the standalone @@historyview view used when
  overlays are turned off.
  [rossp]


1.2.1 (2011-08-25)
------------------

- Put #search-results-bar on a lower CSS layer to not overlap the livesearch 
  [spliter]
 
1.2 - 2011-07-19
----------------

- Switch to HTML5 doctype. References http://dev.plone.org/plone/ticket/11300
  [spliter]

- Deprecated iefixes.js and IEFixes.css after we have introduced Modernizr.
  References http://dev.plone.org/plone/ticket/11300
  [spliter]

- Merge PLIP 9352. 
  [esteele]
  
- Applied styles for search filter on search results page.
  References http://dev.plone.org/plone/ticket/9352
  [spliter]
  
1.1.5 - 2011-07-04
------------------

- Fixed IE8 issue where a ghost top-margin would appear above the
  headline in the folder summary listing.
  [malthe]

- Add shadow and border for iframe overlays to match images and ajax overlays.
  [smcmahon]

- Fixed: portal footer is in a 'row' div.
  [thomasdesvenain]

- Clean up HTML comments in main_template.
  [davisagli]

- Add ids on content core viewlet managers.
  [thomasdesvenain]

- Fixed: siteactions background-color was applied to whole page.
  Add a clear: left.
  [thomasdesvenain]

- Add IEFixes.css to CSS registry in case plonetheme.classic is not installed.
  [elro]

- Removed comment in IEFixes.css concerning the now removed IE8.js.
  [elro]

- Fixed: spinner is back in main_template.